# job_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/skills/python-workflow-guardrails/: SKILL.md
.github/workflows/: ai-review.yml  cd.yml  ci.yml
cloudrun/: service.yaml
src/job_bot/: __init__.py  adt.py  api.py  applier.py  file_upload.py  flow.py  flow_local.py  job_apply_tools.py  llm.py  main.py  openai_client.py  resume_parser.py
src/job_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/job_bot/agent/: application_agent.py  nodes.py  react_applier.py
src/job_bot/db/: app_redis.py
src/job_bot/utils/: bucket_db.py  caching.py  dag.py  gcp.py  gcp_config.py  json_file_writer.py  redis_cache.py
tests/: test_health.py
tests/unit/job_bot/: test_applier.py  test_file_upload.py  test_flow.py  test_llm.py  test_openai_client.py
