[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-bot"
version = "0.1.0"
description = "Cloud Run Python application for job_bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "PyPDF2==3.0.1",
  "openai==2.6.1",
  "playwright==1.54.0",
  "langchain==1.3.14",
  "langgraph==1.2.9",
  "langchain-openai==1.3.5",
  "langchain-community==0.4.2",
  "tavily-python==0.7.26",
  "langchain-anthropic==1.4.8",
  "langchain-google-genai==4.2.7",
  "langchain-huggingface==1.2.2",
  "langchain-ollama==1.1.0",
  "google-cloud-storage==3.3.1",
  "google-cloud-secret-manager==2.24.0",
  "networkx",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "httpx==0.28.1",
  "ruff==0.15.22",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.pylint.main]
py-version = "3.11"
fail-under = 6.0


[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "invalid-name",
    "broad-exception-caught",
    "redefined-outer-name",
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
